Fixed Bug in RobotRepository